    user id and the group id of the owner of the data base directory
    (base.gwb). No error if cannot change to these ids. Deleted the gwd
    options -setuid and -setgid now unuseful.
  - [30 Apr 00] Fixed little problem with displaying by places for the ones
    containing several (at least two) indications between parentheses.

* Base configuration files (base.gwf)
  - [08 May 00] (detail) The possible trailing spaces or control-m are
    now stripped (allowing to move a base.gwf file from Windows to
    Unix without needing to remove them).

* Documentation
  - [06 May 00] Updated Swedish documentation (Lars Gustavsson).
  - [04 May 00] Added one item in FAQ about a possible problem in CGI mode.

GeneWeb version 3.04
--------------------

* Languages
  - [06 Apr 00] Added Afrikaans (Louis Kruger).

* Setup program (gwsetup)
  - [09 Apr 00] Fixed some bugs in Linux rpm package causing gwsetup to
    fail and the browser to answer "no output".

* GeneWeb Service/CGI (gwd)
  - [29 Apr 00] Fixed bug in "descendants", "families with encoding": the
    marriage dates of grandchildren could sometime be erroneously the ones
    of the children.
  - [16 Apr 00] Fixed problem: the kde browser (Konqueror) seems not to handle
    the password protocol. Went around the problem by treating it as it were
    in CGI mode, where the password has to be given in a form.
  - [14 Apr 00] Fixed bug: could no more access a person by his key after
    having changed his name, in the case when the initial first name or
    surname was a question marks *and* the changed name had nevertheless
    the same signature.
    Example:
       before: first name = "John Smith"; surname = "?"
        after: first name = "John"; surname = "Smith"
    When doing this fix, there were no more way to access "John Smith" by
    his key, particularly in forms (which is rather annoying).
  - [13 Apr 00] Added nice display of language code when mouse over the
    flag (Emmanuelle Visseaux's code).